--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader": "^2.4.7",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
